<resources>
    <!-- App name -->
    <string name="app_name">Proyecto</string>

    <!-- Navigation drawer -->
    <string name="navigation_drawer_open">Abrir menú de navegación</string>
    <string name="navigation_drawer_close">Cerrar menú de navegación</string>

    <!-- Navigation header -->
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Encabezado de navegación</string>

    <!-- Settings -->
    <string name="action_settings">Configuraciones</string>

    <!-- Menu options -->
    <string name="menu_profile">Perfil</string>
    <string name="menu_video">Video</string>
    <string name="menu_photo">Galeria</string>
    <string name="menu_web">Web</string>
    <string name="menu_buttons">Botones</string>
</resources>
