<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_profile">

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.proyecto.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/nav_video"
        android:name="com.example.proyecto.ui.video.VideoFragment"
        android:label="@string/menu_video"
        tools:layout="@layout/fragment_video" />
    <fragment
        android:id="@+id/nav_photo"
        android:name="com.example.proyecto.ui.photo.PhotoFragment"
        android:label="@string/menu_photo"
        tools:layout="@layout/fragment_photo" />
    <fragment
        android:id="@+id/nav_web"
        android:name="com.example.proyecto.ui.web.WebFragment"
        android:label="@string/menu_web"
        tools:layout="@layout/fragment_web" />
    <fragment
        android:id="@+id/nav_buttons"
        android:name="com.example.proyecto.ui.botones.ButtonsFragment"
        android:label="@string/menu_buttons"
        tools:layout="@layout/fragment_photo" />
</navigation>